src/style.css
@import "./reset.css";

@import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600&display=swap");

@media (max-width: 850px) {
  :root body {
    height: 150vh;
  }

  body #input-city {
    width: 200px;
  }

  body #input-city:hover,
  body #input-city:not(:placeholder-shown) {
    width: 200px;
  }

  body #input-city.invalid:not(:placeholder-shown) ~ span.invalid::after{
    width: 96%
  }

  body main {
    display: grid;
    grid-template-columns: 1fr;
    grid-row: 2fr 0.2fr 1fr;
    justify-items: center;
    align-items: center;
    grid-template-areas:
      "current"
      "gif"
      "title"
      "forecast";
  }

  #current {
    width: auto;
  }

  body #forecast {
    grid-area: forecast;
    flex-direction: column;
    align-items: center;
    width: auto;
  }

  body .another-day {
    width: 70%;
  }
}

:root {
  --color-background: #27272a;
  --color-light: #f4f4f5;
  --color-medium-light: #a1a1aa;
  --color-medium-dark: #52525b;
  --color-dark: #3f3f46;
  --color-complementary1-light: rgb(162, 242, 144);
  --color-complementary1-dark: rgb(14, 60, 13);
  --color-complementary2-light: rgb(245, 176, 118);
  --color-complementary2-dark: rgb(131, 63, 14);
  font-family: "Maven Pro", sans-serif;
}

/* * {
    outline: dashed red;
} */

body {
  background-color: var(--color-background);
  height: 100vh;
  width: 100vw;
  display: grid;
  grid-template-rows: 100px 1fr 50px;
}

header {
  background-color: var(--color-background);
  display: grid;
  justify-items: center;
  align-items: center;
  grid-template-columns: 2fr 1fr;
  width: 100%;
}

header form {
  position: relative;
}

#input-city {
  background-color: var(--color-background);
  border: none;
  color: var(--color-light);
  font-size: 2rem;
  width: 200px;

  padding: 3px;
  background-image: url("./assets/search-icon.svg");
  background-position: 2px 5px;
  background-repeat: no-repeat;
  padding-left: 40px;
  padding-right: 30px;
}

#input-city:hover,
#input-city:not(:placeholder-shown) {
  width: 450px;
  border-bottom: solid var(--color-complementary1-light) 3px;
  transition: all 1s;
}

#input-city.invalid:not(:placeholder-shown) {
  background-color: rgb(122, 42, 42);
  box-shadow: 1px 2px 5px 5px rgb(122, 42, 42);
}
#input-city.invalid:not(:placeholder-shown) ~ button {
  background-color: rgb(122, 42, 42);
}

#input-city:focus {
  outline: none;
}

span {
  transition: all 1s;
}

#clear {
  color: white;
  background-color: var(--color-background);
  opacity: 0;
  border: none;
  position: absolute;
  right: 0px;
  top: 0px;
  font-size: 2rem;
}

#clear:hover {
  opacity: 1;
  color: var(--color-complementary2-light);
  transition: all 1s;
}

#input-city:hover:not(:placeholder-shown) ~ #clear,
#input-city:focus:not(:placeholder-shown) ~ #clear {
  opacity: 1;
  display: block;
  height: 50%;
}

#input-city.invalid:not(:placeholder-shown) ~ span.invalid::after {
  content: "Please write a valid city name";
  color: var(--color-light);
  position: absolute;
  bottom: -23px;
  width: 98%;
  left: 0px;
  background-color: rgb(122, 42, 42);
  box-shadow: 1px 2px 5px 5px rgb(122, 42, 42);
  padding: 5px;
  text-align: center;
}

#input-city ~ span.no-city:after {
  content: "Couldn't find that city";
  color: var(--color-background);
  position: absolute;
  bottom: -23px;
  width: 100%;
  left: 0px;
  background-color: var(--color-complementary1-light);
  padding: 5px;
  text-align: center;
}

/* toggle switch */

.toggle-button-cover {
  justify-self: left;
  display: table-cell;
  position: relative;
  width: 200px;
  height: 100px;
  box-sizing: border-box;
}

.button-cover {
  height: 50px;
  margin: 20px;
  background-color: var(--color-background);
  border-radius: 4px;
}

.button-cover,
.knobs,
.layer {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.button {
  position: relative;
  top: 50%;
  width: 85px;
  height: 40px;
  margin: -20px auto 0 auto;
  overflow: hidden;
}

.button.r,
.button.r .layer {
  border-radius: 100px;
}

.button.b2 {
  border-radius: 2px;
}

.checkbox {
  position: relative;
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
  opacity: 0;
  cursor: pointer;
  z-index: 3;
}

.knobs {
  z-index: 2;
}

.layer {
  width: 100%;
  background-color: #ebf7fc;
  transition: 0.3s ease all;
  z-index: 1;
}

/* Button 1 */
#button-1 .knobs:before {
  content: "°F";
  position: absolute;
  top: 3px;
  left: 3px;
  width: 30px;
  height: 15px;
  color: var(--color-background);
  font-size: 1rem;
  font-weight: bold;
  text-align: center;
  line-height: 1;
  padding: 9px 4px;
  background-color: var(--color-complementary1-light);
  border-radius: 50%;
  transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
}

#button-1 .checkbox:checked + .knobs:before {
  content: "°C";
  left: 42px;
  background-color: var(--color-complementary2-light);
}

#button-1 .checkbox:checked ~ .layer {
  background-color: #fcebeb;
}

#button-1 .knobs,
#button-1 .knobs:before,
#button-1 .layer {
  transition: 0.3s ease all;
}

/* main display */

main {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-row: 3fr 0.3fr 1fr;
  grid-template-areas:
    "current gif"
    "title title"
    "forecast forecast";
  justify-items: center;
  align-items: center;
}

#current {
  grid-area: current;
  font-size: 1.5rem;
  min-width: 300px;
  min-height: 300px;
  grid-template-columns: 1fr 0.9fr;
  grid-template-rows: repeat(2, 0.7fr) repeat(4, 0.4fr);
  grid-template-areas:
    "cityName cityName"
    "date     date"
    "icon feelsLike"
    "icon humidity"
    "temperat windSpeed"
    "temperat cloudiness";
  font-size: 1.3rem;
}

#current > img{
    grid-area: icon;
}

#gif {
  grid-area: gif;
  display: flex;
  justify-content: center;
  align-items: center;
}

#gif > img {
  --dimension: 300px;
  width: var(--dimension);
  height: var(--dimension);
}
#forecast-title {
  grid-area: title;
  font-size: 2rem;
  padding: 10px;
  color: var(--color-light);
  opacity: 1;
}

#forecast-title.invisible {
  opacity: 0;
}
#forecast {
  grid-area: forecast;
  display: flex;
  align-items: stretch;
  justify-content: space-around;
  width: 100%;
}

#current,
.another-day {
  display: grid;
  align-items: center;
  justify-items: center;
  margin: 15px;
  padding: 15px;
  gap: 10px;
  color: var(--color-light);
  border-radius: 2rem;
}
#current > p {
  justify-self: left;
}

#current.active,
.another-day.active {
  background-color: var(--color-medium-dark);
}

#current.loading,
.another-day.loading {
  background: linear-gradient(
    to bottom,
    var(--color-light) 16%,
    var(--color-medium-dark) 25%,
    var(--color-dark) 50%
  );
  background-size: 104px 800px;
  animation-duration: 2s;
  animation-fill-mode: forwards;
  animation-iteration-count: infinite;
  animation-name: placeHolderShimmer;
  animation-timing-function: linear;
}

.another-day {
  grid-template-columns: 1fr;
  grid-template-rows: 0.5fr 1fr 0.5fr;
  grid-template-areas:
    "date"
    "icon"
    "temperat";
  min-width: 160px;
  min-height: 160px;
  gap: 0px;
}

.another-day > img{
    grid-area: icon;
    width: 78px;
}

/* .description {
  grid-area: descript;
  font-size: 1.3rem;
  font-style: italic;
  color: var(--color-complementary1-light);
}

#current .description {
  font-size: 3rem;
} */

.name {
  grid-area: cityName;
  font-size: 2.5rem;
  font-weight: bold;
}

.day {
  grid-area: date;
  color: var(--color-complementary2-light);
  font-size: 1.1rem;
}

#current .day {
  font-size: 2.2rem;
}

.temp {
  grid-area: temperat;
  font-size: 2.5rem;
  font-weight: bolder;
  color: var(--color-complementary2-light);
}

.temp.active::after,
.feelsLike.active::after {
  content: " °F";
}

.temp.active.celsius::after,
.feelsLike.active.celsius::after {
  content: " °C";
}

#current .temp {
  font-size: 4rem;
}

.feelsLike {
  grid-area: feelsLike;
}

.feelsLike.active::before {
  content: "Feels like: ";
}

.humidity {
  grid-area: humidity;
}

.humidity.active::before {
  content: "Humidity: ";
}

.humidity.active::after {
  content: "%";
}

.windSpeed {
  grid-area: windSpeed;
}

.windSpeed.active::before {
  content: "Wind speed: ";
}
.windSpeed.active::after {
  content: " m/s";
}

.cloudiness {
  grid-area: cloudiness;
}

.cloudiness.active::before {
  content: "Cloudiness: ";
}

.cloudiness.active::after {
  content: "%";
}

.another-day {
  font-size: 1rem;
}

footer {
  margin-top: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 50px;
  width: 100%;
  gap: 2vw;
  background-color: var(--color-background);
  color: white;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 1.5rem;
}

#github-logo {
  height: 30px;
}

@keyframes placeHolderShimmer {
  0% {
    background-position: 0 -800px;
  }
  100% {
    background-position: 0 800px;
  }
}

